data/derived/sp14/progs/unify/prog0404.ml.out
Characters 22-29:
  let _ = string_of_int [1;2;3];;
                        ^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
